# app/Http/Controllers/NotifikasiController.php
@@ -9,11 +9,19 @@ use Illuminate\Support\Facades\Auth;
 
 class NotifikasiController extends Controller
 {
+    /**
+     * @OA\Get(
+     *  path="/api/notifikasi",
+     *  tags={"Notifikasi"},
+     *  summary="Get notifikasi",
+     *  @OA\Response(response=200, description="Get notifikasi"),
+     *  security={{ "apiAuth": {} }}
+     * )
+     */
     public function index()
     {
-        $user = User::find(Auth::id());        
+        $user = User::find(Auth::id());
         $Notifikasi = NotifikasiResource::collection($user->notifications);
         return $this->successResponse(['jumlah_notifikasi' => $user->notifications->count(), 'data' => $Notifikasi]);
     }
-
 }
